Crud Funcional y Testeado

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <div class="col-md-3 col-12">
                 <select name="priority" id="inputPriority" class="form-select">
                     <option value="unselect">--- Seleccionar Prioridad ---</option>
-                    <option value="normal">Normal</option>
-                    <option value="intermedia">Intermedia</option>
-                    <option value="urgente">Urgente</option>
+                    <option value="normales">Normal</option>
+                    <option value="intermedias">Intermedia</option>
+                    <option value="urgentes">Urgente</option>
                 </select>
             </div>
             <div class="col-md-auto col-12"><button id="addButton" class="form-control bg-primary text-light">Agregar</button></div>
