--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
         
     <header class="bg-primary p-3">
-        <h1 class="text-center text-light fs-3 ">Gestor de Tareas - ToDo V.1</h1>
+        <h1 class="text-center text-light fs-3 ">Gestor de Tareas - ToDo V.1 JavaScript Vainilla</h1>
     </header>
 
     <section class="container p-5">
